# tradingenv

./: .gitignore  Dockerfile  README.md  README.rst  changelog.md  changelog.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-docs.yml  python-app.yml  software-tests.yml
docs/: Makefile  futures-backtesting.md  make.bat
docs/source/: changelog.rst  conf.py  modules.rst  readme.rst  tradingenv.broker.rst
notebooks/: Untitled.ipynb  calculate-tearsheet.ipynb  create-rl-environment.ipynb  gym.ipynb  run-backtest.ipynb  tearsheet.ipynb
tests/: conftest.py
tests/examples/: __init__.py  test_readme.py
tests/integration/: test_allocation.py  test_broker.py  test_env.py  test_events.py  test_features.py  test_readme.py  test_rebalancing.py  test_state.py  test_track_record.py  test_transmitter.py
tests/integration/data/: ES.csv
tests/notebooks/: .template.ipynb  __init__.py  test_notebooks.py
tests/regression/: test_env.py
tests/regression/data/: etf.xlsx  futures_prices.xlsx  futures_solutions.xlsx  (+1 more)
tests/unit/: test_allocation.py  test_contracts.py  test_env.py  test_events.py  test_exchange.py  test_features.py  test_fees.py  test_library.py  test_metrics.py  test_rebalancing.py  test_spaces.py  test_state.py  test_trade.py  test_transmitter.py
tradingenv/: __init__.py  contracts.py  env.py  events.py  exchange.py  features.py  library.py  metrics.py  policy.py  rewards.py  spaces.py  state.py  transmitter.py
tradingenv/broker/: __init__.py  allocation.py  broker.py  fees.py  rebalancing.py  track_record.py  trade.py
