# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"


[project]
name = "tradingenv"
version = "0.1.2"
authors = [
  { name="Federico Fontana", email="federico.fontana@xai-am.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.txt"}
dynamic = ["description", "keywords" , "dependencies", "optional-dependencies"]


[project.urls]
"Homepage" = "https://github.com/xaiassetmanagement/tradingenv"
"Documentation" = "https://xaiassetmanagement.github.io/tradingenv"
"Bug Tracker" = "https://github.com/xaiassetmanagement/tradingenv/issues"
